--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="/home">Main</a>
+  <a class="navbar-brand" href="/main">Main</a>
   <a class="navbar-brand" href="/book">Book</a>
 </nav>
 <router-outlet></router-outlet>
