--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -4,12 +4,17 @@
       <a href="/book"
          role="button"
          class="btn btn-outline-primary btn-lg btn-block text-center">
-        <span><i class="fa fa-users"></i></span>
+        <span><i class="fa fa-book"></i></span>
         <br>Book
       </a>
     </div>
     <div class="col-sm">
-      Button 2
+      <a href="/author"
+         role="button"
+         class="btn btn-outline-primary btn-lg btn-block text-center">
+        <span><i class="fa fa-user"></i></span>
+        <br>Author
+      </a>
     </div>
     <div class="col-sm">
       Button 3
